
  Used mogrify executable because of constant difficulty building and
  installing Image::Magick perl modules.

  Example on the foundation demo:

     [image src="items/os28004.gif" makesize=50x50]

  This will create __IMAGE_DIR__/items/50x50/os28004.gif and return:

     <img src="items/50x50/os28004.gif" height=50 width=50>

  The size is still determined by Image::Size.

i18n
----

* Update Italian UI translation.

SOAP
----

* Fix tree option in soap_entity tag.

* Enable calling of catalog usertags in SOAP actions.

Debian
------

* Drop Build-Depends on libdb2-dev to allow builds on woody and sid,
  apache-dev already has the proper dependency (Closes: #198136)

Miscellaneous
-------------

* Allow wildchar(*) in Swish search.

* Various minor cleanup, prevents warnings on startup.

* Call tracking functions only if Vend::Track object exists.

Extensions
----------

* Quickbooks updates:

  - Updated documentation.
  
  - Installation fixes.
  
  - Rewrite of the IIF generation query page:
    - Can query by order number range, date range, or "since last generation"
    - Allow specification of QuickBooks invoice number to be used 
      and incremented during IIF generation.
    - Filters out deleted orders.
  
  - IIF Generation changes:
    - Use the country name instead of the country code.
    - Some filter updates (the period is not as dangerous as it looks).


------------------------------------------------------------------------------


Interchange 4.9.8 released 2003-06-19.


Core
----

* Allow [PREFIX-more-list] ... [/PREFIX-more-list] for nested loops.

* Support sparsely-populated quantity pricing tables.

* Fix bug in field name ranges in CommonAdjust where q99..q101 was handled
  as a Perl alphanumeric range q99, r00, r01, r02, etc. instead of
  q99, q100, q101.

* Remove wrong default for DatabaseDefault, could cause error when a
  DatabaseDefault value had not been previously set.
